Ensure the focus style is visible

--- a/mu-plugins/blocks/global-header-footer/postcss/header/search.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/search.pcss
@@ -27,6 +27,10 @@
 			padding-top: 16px;
 			background-position: center;
 		}
+
+		&:focus {
+			outline: 1px dotted currentColor;
+		}
 	}
 
 	& .wp-block-navigation__responsive-container-open {
@@ -135,6 +139,10 @@
 					min-width: 20px;
 					width: 20px;
 				}
+			}
+
+			&:focus {
+				outline: revert;
 			}
 		}
 	}
